--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head>k</head>
+    <head>k
+        <link ref="stylesheet" href="site.css">
+    </head>
     <body>
         <h1>hi madhu </h1>
     </body>
