--- a/index.html
+++ b/index.html
@@ -4,5 +4,20 @@
     </head>
     <body>
         <h1>hi madhu </h1>
+        <table>
+            <tr><th>S.no</th>
+                <th>Date</th>
+                <th>task></th>
+                <th>Link</th>
+                <th>remarks</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>29-05-23</td>
+                <td>created my html page</td>
+                <td>https://madhu0321.github.io/</td>
+                <td>first task done</td>
+            </tr>
+        </table>
     </body>
 </html>
