--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-    <head>k
+    <head>HELLO CSS
         <link ref="stylesheet" href="site.css">
     </head>
     <body>
-        <h1>hi madhu </h1>
+        <h1>Hi Madhu</h1>
+        <h2>Daily progress track</h2>
         <table>
             
             <tr><th>S.no</th>
