--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
             
             <tr><th>S.no</th>
                 <th>Date</th>
-                <th>task></th>
+                <th>Task></th>
                 <th>Link</th>
-                <th>remarks</th>
+                <th>Remarks</th>
             </tr>
             <tr>
                 <td>1</td>
