--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
-<html>
-    <head>HELLO CSS
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    HELLO CSS
+    <title>Name</title>
         <link ref="stylesheet" href="site.css">
     </head>
     <body>
@@ -22,5 +28,6 @@
                 <td>first task done</td>
             </tr>
         </table>
+        <script src="script.js"></script>
     </body>
 </html>
