--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    HELLO CSS
+    
     <title>Name</title>
         <link ref="stylesheet" href="site.css">
     </head>
@@ -16,7 +16,7 @@
             
             <tr><th>S.no</th>
                 <th>Date</th>
-                <th>Task></th>
+                <th>Task</th>
                 <th>Link</th>
                 <th>Remarks</th>
             </tr>
