--- a/index.html
+++ b/index.html
@@ -26,6 +26,16 @@
                 <td>https://madhu0321.github.io/</td>
                 <td>first task done</td>
             </tr>
+
+            <tr>
+                <td>2</td>
+                <td>30-05-23</td>
+                <td>problem 7</td>
+                <td>https://ideone.com/Bb69MH</td>
+                <td>first task done</td>
+            </tr>
+
+
         </table>
         <script src="script.js"></script>
     </body>
