--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             <tr>
                 <td>2</td>
                 <td>30-05-23</td>
-                <td>problem 7</td>
+                <td>problem 4,5,7</td>
                 <td>https://ideone.com/Bb69MH</td>
-                <td>first task done</td>
+                <td>done</td>
             </tr>
+
 
 
         </table>
