--- a/index.html
+++ b/index.html
@@ -60,6 +60,19 @@
                 <td>done</td>
             </tr>
 
+            <td>6</td>
+            <td>5-06-23</td>
+            <td>Create  a user card</td>
+            <td><a href="./user1.html">Link to user card</a></td>
+            <td>Completed</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>5-06-23</td>
+            <td>Create  a user card 2</td>
+            <td><a href="./user2.html">Link to user card 2</a></td>
+            <td>In progress</td>
+
          
 
 
